# omni-notification-bot

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: interfaces.py  models.py
infrastructure/: database.py  repositories.py  telegram_adapter.py  viber_adapter.py
services/: smart_notifier.py
tests/: conftest.py  test_adapters.py  test_services.py
