[tool.poetry]
name = "omni-notification-bot"
version = "0.1.0"
description = "Omnichannel notification bot for Viber and Telegram"
authors = ["Ihor Senkiv <igor060690@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
viberbot = "^1.0.11"
requests = "^2.31"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
gunicorn = "^21.2"
alembic = "^1.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"